# figshare_get

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: package.yml
src/figshare_get/: __main__.py  cli.py
