[project]
name = "figshare_get"
version = "0.0.1"
authors = [
  { name="Tom Russell", email="tom.russell@ouce.ox.ac.uk" },
]
description = "Download from figshare"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[
    "requests",
]

[project.scripts]
figshare_get="figshare_get.cli:figshare_get"

[project.urls]
"Homepage" = "https://github.com/nismod/figshare_get"
"Bug Tracker" = "https://github.com/nismod/figshare_get/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
